--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "joi": "^14.0.0",
+    "mongoose": "^5.3.4",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
