--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "joi": "^14.0.0",
     "mongoose": "^5.3.4",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
