--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "joi": "^14.0.0",
     "mongoose": "^5.3.4",
     "mongoose-paginate": "^5.0.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
