--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "joi": "^14.0.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.4",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
