--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "it is the node application using es6 to make restfull apis using mongoose express ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js --exec babel-node --presets env",
+    "dev": "nodemon src/app.js --exec babel-node --presets env",
     "build": "babel src -d dist --source-maps inline --copy-files",
-    "serve": "node dist/app.js"
+    "heroku-postbuid":"npm install",
+    "start":"babel-node src/app.js"
+ 
   },
   "keywords": [],
   "author": "Rajneesh",
